--- a/main.html
+++ b/main.html
@@ -1,62 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Data</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <label for="fname">name:</label>
-    <input type="text" id="fname" name="fname"><br><br>
+  <div class="top">
+    <br>
+    <h1>Enter rating for below parameters [1-10]</h1>
+    <br>
+  </div>
+
+  <hr>
+  <br>
+
+  <div class="parameters">
+    <label for="fname">Name</label>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Age</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Gender</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Air Pollution</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Alcohol use</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Dust Allergy</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">OccuPational Hazards</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Genetic Risk</label>
-    <input type="text" id="fname" name="fname"><br><br>
-    <label for="">chronic Lung Disease</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
+    <label for="">Chronic Lung Disease</label>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Balanced Diet</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Obesity</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Smoking</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Passive Smoker</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Chest Pain</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Coughing of Blood</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Fatigue</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Weight Loss</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Shortness of Breath</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Wheezing</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Swallowing Difficulty</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Clubbing of Finger Nails</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Frequent Cold</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Dry Cough</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Snoring</label>
-    <input type="text" id="fname" name="fname"><br><br>
+    <input type="number" id="fname" name="fname"><br><br>
     <label for="">Level</label>
-    <input type="text" id="fname" name="fname"><br><br>
-    
+    <input type="number" id="fname" name="fname"><br><br>
+  </div>
+
+
 </body>
+
 </html>
