--- a/local/home.html
+++ b/local/home.html
@@ -33,7 +33,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="skills.html">Lung Cancer Identifier</a>
+                        <a class="nav-link" href="main.html">Lung Cancer Identifier</a>
                     </li>
             </div>
         </div>
@@ -56,13 +56,13 @@
     <div class="container">
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+                <li class="nav-item"><a href="home.html" class="nav-link px-2 text-muted">Home</a></li>
                 <!-- <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li> -->
             </ul>
             <p class="text-center text-muted">Sarvejana Sukhino Bhavantu</p>
         </footer>
     </div>
-    
+
 
 
 
