--- a/local/main.html
+++ b/local/main.html
@@ -14,7 +14,7 @@
 <body>
   <div class="top">
     <br>
-    <h1>Enter rating for below parameters [1-10]</h1>
+    <h1>Enter the details and ratings for below parameters [1-10]</h1>
     <br>
   </div>
 
