--- a/local/main.html
+++ b/local/main.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-image:url(https://www.mankindpharma.com//media/images/blogpost/image/importance-of-good-health-1593440197.jpg);">
   <div class="top">
     <br>
     <h1>Enter the details and ratings for below parameters [1-10]</h1>
