--- a/local/main.html
+++ b/local/main.html
@@ -25,7 +25,7 @@
     <label for="fname">Name</label>
     <input type="text" id="fname" name="fname"><br><br>
     <label for="">Age</label>
-    <input type="number" id="fname" name="fname"><br><br>
+    <input type="text" id="fname" name="fname"><br><br>
     <label for="">Gender</label>
     <input type="text" id="fname" name="fname"><br><br>
     <label for="">Air Pollution</label>
