--- a/local/main.html
+++ b/local/main.html
@@ -70,6 +70,8 @@
     <input type="number" id="fname" name="fname"><br><br>
     <label for="">Snoring</label>
     <input type="number" id="fname" name="fname"><br><br>
+
+    <button>Submit</button
   </div>
 
 
