--- a/local/main.html
+++ b/local/main.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-image: url(https://images.unsplash.com/photo-1471879832106-c7ab9e0cee23?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60);">
   <div class="top">
     <br>
     <h1>Enter the details and ratings for below parameters [1-10]</h1>
